# ultra-game

./: .envrc  CLAUDE.md  Cargo.toml  Earthfile  flake.nix  justfile  plan.md  rust-toolchain.toml
.cargo/: config.toml
.claude/commands/: next-todo.md
.github/workflows/: ci.yml
.zencoder/rules/: repo.md
docs/: ability-casting-refactoring.txt  big-brain.md  fight_improvement.md  notes.md  slot-cooldowns.md
src/: abilities.rs  ability_catalog.rs  ability_fixes_test.rs  core_logic.rs  fight_board_plugin.rs  fight_selection_ui.rs  fight_ui.rs  fight_ui_plugin.rs  game_logic.rs  main.rs  test_utils.rs  utils.rs
src/abilities/: charged_strike.rs  needling_hex.rs  prepared_block.rs  weapon_attack.rs
src/fight_board_plugin/: abilities_section.rs  ability_slots_section.rs  fight_added.rs
src/fight_ui/: render_effects.rs  render_fight_window.rs  ui_utils.rs
src/game_logic/: ability.rs  ability_casting.rs  ability_slots.rs  ai_behavior.rs  commands.rs  cooldown.rs  damage_resolution.rs  effects.rs  faction.rs  fight.rs  health.rs  ongoing_cast.rs  slot_casting.rs
src/utils/: egui_systems.rs  finite_repeating_timer.rs  holds_held.rs
support/: ci_sh.sh
