[package]
name = "ultra-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# from https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# compile build-scripts and proc-macros with optimizations (not sure if this helps)
[profile.dev.build-override]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", features = ["wayland", "dynamic_linking"] }
bevy-inspector-egui = "0.25.0"
derive_more = "0.99.18"
itertools = "0.13.0"

# for trying out derive macro caching yadda yadda
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fake_changed)'] }
