[package]
name = "ultra-game"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# from https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# compile build-scripts and proc-macros with optimizations (not sure if this helps)
[profile.dev.build-override]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
ahash = "0.8.12"
bevy = { version = "0.16.1", features = ["wayland", "dynamic_linking", "track_location"] }
bevy-inspector-egui = "0.31.0"
# latest version on crates.io, 0.22.0, only supports bevy 0.15. `main` supports 0.16.
big-brain = { git = "https://github.com/zkat/big-brain", branch = "main" }
derive_more = { version = "2.0.1", features = ["full"] } # TODO: can probably slim down the feature set. but didn't bother for now.
itertools = "0.14.0"

# fix https://github.com/futile/ultra-game/security/dependabot/6
tracing-subscriber = "0.3.20"
